tempfile/impl-trait-for-tuples/tests/ui/no_return_value.rs
#[impl_trait_for_tuples::impl_for_tuples(1)]
trait Test {
    fn test() -> u32;
}

fn main() {}
